dimagi-SalesforceFB/src/objects/Accounting_Subscriber__c.object
<CustomObject>
    <fields>
        <fullName>domain__c</fullName>
        <label>domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>domain_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>domain (lookup)</label>
        <referenceTo>Domain__c</referenceTo>
        <relationshipLabel>Accounting_Subscriber</relationshipLabel>
        <relationshipName>Accounting_Subscriber</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organization__c</fullName>
        <label>organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_Subscriber</label>
    <nameField>
        <displayFormat>Subscriber-{00000}</displayFormat>
        <label>Subscriber#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_Subscriber</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>